# EP_MVGA

./: Barycentric.cpp  CMakeLists.txt  CMakeLists.txt.user.516796f  Image.fs  README.md  Shader.h  glad.c
Shaders/: BufferA.fs  BufferB.fs  BufferC.fs  Image.fs  TextureViewer.fs.frag  common.incl
